# dsc.rs

./: .gitignore  Cargo.toml  README.md  dsc.example.toml  implementation.md  queries.md  todo.md
.github/workflows/: release.yml
completions/: _dsc  dsc.bash  dsc.fish  dsc.zsh
s/: release
spec/: implementation.md  queries.md  roadmap.md  spec.md
src/: cli.rs  config.rs  discourse.rs  lib.rs  main.rs  utils.rs
src/api/: client.rs  settings.rs
src/commands/: add.rs  backup.rs  category.rs  common.rs  completions.rs  emoji.rs  group.rs  import.rs  list.rs  mod.rs  palette.rs  setting.rs  theme.rs  topic.rs  update.rs
src/discourse/: client.rs  emoji.rs
tests/: add-test.rs  completions-test.rs  e2e.rs  emoji-test.rs  import-test.rs  list-test.rs  palette-test.rs  plugin-test.rs  setting-test.rs  theme-test.rs  update-test.rs
tests/common/: mod.rs
